force-app/main/default/objects/Study_Scoring_Config__c/Study_Scoring_Config__c.object-meta.xml
<CustomObject>
    <description>Groups scoring criteria; includes logic for application matching.</description>
    <label>Study Scoring Config</label>
    <nameField>
        <label>Study Scoring Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Scoring Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>