force-app/main/default/objects/Study_Scoring_Config__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Unique identifier</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>