force-app/main/default/objects/Study_Scoring_Config__c/fields/Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field__c</fullName>
    <label>Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>