force-app/main/default/objects/Study_Scoring_Config__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Formula expression to match records</description>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>