force-app/main/default/objects/Study_Scoring_Config__c/validationRules/Required_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Object</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(SObject_Type__c)</errorConditionFormula>
    <errorDisplayField>SObject_Type__c</errorDisplayField>
    <errorMessage>Please provide the parent SObject Type of the Study Scoring Config.</errorMessage>
</ValidationRule>